--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -42,8 +42,7 @@
   }
 
   .category-body-container {
-    height: 90px;
-    padding: 0 25px;
+    padding: 10px 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,7 +61,8 @@
 
     p {
       font-weight: lighter;
-      font-size: 16px;
+      font-size: 20px;
+      margin: 10px 0;
     }
   }
 }
